# socio_wave_stats_collector

./: .env.example  .gitignore  collection_after_adding.py  main.py  pyproject.toml  scheduled_collection.py  test_metrics.py
models/: pydantic_models.py
scripts/linux/: collect
scripts/win/: collect.bat
src/: settings.py
src/api/: __init__.py  apiTG.py  apiVK.py  get.py
src/core/: __init__.py  apiTG.py  apiVK.py  config.py  database.py  smtp.py
src/exceptions/: __init__.py  exceptions.py
src/handlers/: __init__.py  handle_tg.py  handle_vk.py
src/logger/: logger.py
src/message_queue/: consumer.py  producer.py
src/models/: __init__.py  pydantic_models.py  sqlalchemy_models.py
src/platformStats/: StatABS.py  TGStat.py  VKStat.py  __init__.py
src/repositories/: base.py  repository.py
src/sessions/: anon.session
src/stats/: StatABS.py  VKStat.py  __init__.py  collect.py  handle.py  handle_stats.py  send.py
src/tasks/: __init__.py  create.py  run.py
src/templates/: top_posts_email_template.j2
src/tools/: __init__.py  create_basic_elem.py  crypto.py  email_tools.py  interval_distribution.py
