[project]
name = "vkr-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=47.0.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email,timezone]>=2.12.5",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "telethon>=1.42.0",
    "vk-api>=11.10.0",
]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
]
